--- a/public/css/fullcalendar.css
+++ b/public/css/fullcalendar.css
@@ -323,6 +323,8 @@ a.fc-event,
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 	}
 
 .fc-event-time{
@@ -333,7 +335,10 @@ a.fc-event,
 .fc-event-title {
 		padding-right: 1px;
 		padding-left: 3px;
-		font-family: 'NanumGothic'
+		font-family: 'NanumGothic';
+		overflow: hidden;
+		white-space: nowrap;
+		text-overflow: ellipsis;
 	}
 
 .fc .ui-resizable-handle {
