--- a/views/day_calendar.ejs
+++ b/views/day_calendar.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
     <head>
         <meta charset = utf-8>
@@ -23,11 +23,11 @@
 
       <!-- 후에는 편집 페이지를 따로 만들고 save, detail 버튼 추가 // 처음 일정 추가 시에는 create 버튼 -->
         <!-- Create & Save Modal -->
-        <div class="modal fade" id="editModal" role="dialog">
+        <!--<div class="modal fade" id="editModal" role="dialog">
             <div class="modal-dialog">
 
                 <!-- Modal content -->
-                <div id="modal-content">
+                <!--<div id="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" id="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     </div>
@@ -56,4 +56,4 @@
 
         <script src = "/js/day_calendar.js"></script>
      </body>
-</html>
+</html>-->
