--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -4,7 +4,7 @@
 	<!-- <meta charset = "utf-8"> -->
     <title>Calendar_month</title>
 
-	<script src="//d3js.org/d3.v3.min.js"></script>
+	<!--<script src="//d3js.org/d3.v3.min.js"></script>-->
 	<script src="/vendor/ejs.js"></script>
 	<link href="/css/style.css" rel="stylesheet" type="text/css">
 
@@ -80,7 +80,7 @@
 			<div id='hide-scrollbar'>
 				<div id='calendar-inner'>
 
-					<div class="modal fade" id="view_eventadd">
+					<div class="modal fade" id="addModal">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
@@ -90,7 +90,7 @@
 								<div class="modal-body">
 									<p>
 										<label>Event title</label><br/>
-										<input type = "text" id = "title" class = "span10">
+										<input type = "text" id = "addTitle" class = "span10">
 									</p>
 
 									<!--<p>
@@ -100,13 +100,13 @@
 								</div>
 								<div class="modal-footer">
 									<button type = "button" class="btn btn-primary" data-option="add" id="add">add</button>
-									<button type = "button" class="btn btn-default" data-dismiss="modal">Close</button>
+									<!-- <button type = "button" class="btn btn-default" data-dismiss="modal">Close</button> -->
 								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="modal fade" id="view_event">
+					<div class="modal fade" id="editModal">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
@@ -116,13 +116,37 @@
 								<div class="modal-body">
 									<p>
 										<label>Event title</label><br/>
-										<input type = "text" id = "changetitle" class = "span10">
+										<input type = "text" id = "editTitle" class = "span10">
 									</p>
 								</div>
 								<div class="modal-footer">
 									<button type = "button" class = "btn btn-danger" data-option = "remove" id = "remove">remove</button>
+									<button type = "button" class = "btn btn-primary" data-option = "detail" id = "detail">detail</button>
 									<button type = "button" class = "btn btn-primary" data-option = "edit" id = "edit">edit</button>
-									<button type= " button" class = "btn btn-default" data-dismiss = "modal">Close</button>
+									<!-- <button type= " button" class = "btn btn-default" data-dismiss = "modal">Close</button> -->
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="modal fade" id="detailModal">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type = "button" class = "close" data-dismiss = "modal" aria-hidden = "true">&times;</button>
+									<h4 class="modal-title" id="event_title">일정</h4>
+								</div>
+								<div class="modal-body">
+									<p>
+										<label>Event title</label><br/>
+										<input type = "text" id = "detailTitle" class = "span10"><br/>
+										<label>Event color</label><br/>
+										<label>Event repeat</label><br/>
+										<label>Event alarm</label><br/>
+									</p>
+								</div>
+								<div class="modal-footer">
+									<button type = "button" class = "btn btn-primary" data-option = "edit" id = "editDetail">save</button>
 								</div>
 							</div>
 						</div>
