--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,12 +45,12 @@
       <div class="subscribe">
         <!-- <div class="row"> -->
           <div id="form-container" class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3">
-            <form action="/login" class="form-inline form-login" role="form">
+            <form action="/auth/login" class="form-inline form-login" role="form">
               <div class="form-group">
                 <!-- <label class="sr-only" for="">로그인</label> -->
                 <div class="input-group">
                   <label for="login_id" class="fa fa-user"></label>
-                  <input type="email" name="email" id="login_id" class="form-control transparent" placeholder="아이디">
+                  <input type="text" name="id" id="login_id" class="form-control transparent" placeholder="아이디">
                 </div>
                 <div class="input-group">
                   <label for="login_password" class="fa fa-lock"></label>
