--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -16,11 +16,16 @@
 
 	<!-- Bootstrap-->
 	<link href = "/css/bootstrap.min.css" rel="stylesheet" media="screen">
-  <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="//d3js.org/d3.v3.min.js"></script>
 	<script src = '/vendor/bootstrap.min.js'></script>
 	<script src = '/vendor/modal.js'></script>
 	<link href='/css/modals.less' rel = 'stylesheet' type = 'text/less'>
 
+	<!--bootstrap timepicker-->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/3.0.0/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.2/moment-with-locales.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/3.0.0/js/bootstrap-datetimepicker.min.js"></script>
+		
 	<!--FullCalendar-->
 
 	<link href='/css/fullcalendar.css' rel='stylesheet' type="text/css">
@@ -33,33 +38,30 @@
 	<script src = '/vendor/modal.js'></script>
 	<link href='/css/modals.less' rel='stylesheet' type='text/css'>
 
-  <script type="text/javascript" src="js/nav.js"></script>
-  <link href = "/css/modal.css" rel="stylesheet" media="screen">
+  	<script type="text/javascript" src="js/nav.js"></script>
 
 	<script type='text/javascript'>
-	$(document).ready(function() {
-		var events = JSON.parse(<%- JSON.stringify(events) %>);
+		$(document).ready(function() {
+			var events = JSON.parse(<%- JSON.stringify(events) %>);
 
-		console.log(<%- JSON.stringify(events) %>);
+			console.log(events[0]);
+			console.log(events.length);
 
-		console.log(events[0]);
-		console.log(events.length);
+			if (events) {
+				for (var renderCalendarIndex = 0; renderCalendarIndex < events.length; renderCalendarIndex++) {
+					var renderEvent = {
+						title : events[renderCalendarIndex].calendar_Title,
+						start : events[renderCalendarIndex].calendar_Start,
+						end : events[renderCalendarIndex].calendar_End,
+						allDay : events[renderCalendarIndex].calendar_AllDay,
+						_id : events[renderCalendarIndex].calendar_Id
+					}
 
-		if (events) {
-			for (var renderCalendarIndex = 0; renderCalendarIndex < events.length; renderCalendarIndex++) {
-				var renderEvent = {
-					title : events[renderCalendarIndex].calendar_Title,
-					start : events[renderCalendarIndex].calendar_Start,
-					end : events[renderCalendarIndex].calendar_End,
-					allDay : events[renderCalendarIndex].calendar_AllDay,
-					_id : events[renderCalendarIndex].calendar_Id
+					$('#calendar').fullCalendar('renderEvent', renderEvent, 'stick');
 				}
-
-				$('#calendar').fullCalendar('renderEvent', renderEvent, 'stick');
 			}
-		}
-	});
-</script>
+		});
+	</script>
 </head>
 <body>
 
@@ -68,8 +70,15 @@
       <header>
           <nav id="navupdown" class="navbar navbar-transparent navbar-fixed-top" role="navigation">
               <div class="container">
-
-                  <div id="navbar-target" class="in">
+                  <div class="navbar-header">
+                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-target">
+                          <span class="sr-only">navigation of toggle</span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                      </button>
+                  </div>
+                  <div id="navbar-target" class="navbar-collapse in">
                       <ul id="navbar" class="nav navbar-nav">
                           <li>
                               <!-- <a href="/"><img src="/imgs/logo" class="index_nav" /></a> -->
@@ -98,7 +107,7 @@
 		<div id='calendar'>
 			<div id='hide-scrollbar'>
 				<div id='calendar-inner'>
- 					<!-- <div class="modal fade" id="addModal">
+ 					<div class="modal fade" id="addModal">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
@@ -107,12 +116,14 @@
 								</div>
 								<div class="modal-body">
 									<p>
-                    <label>일정 이름</label><br/>
-                  </p>
+										<label>일정 이름</label><br/>
+										<input type = "text" id = "addTitle" class = "span10" maxlength="30">
+									</p>
 								</div>
 								<div class="modal-footer">
 									<div id="status-area"></div>
-									# <button type = "button" class="btn btn-default" data-dismiss="modal">Close</button>
+									<button type = "button" class="btn btn-primary" data-option="add" id="add">추가</button>
+									<!-- <button type = "button" class="btn btn-default" data-dismiss="modal">Close</button> -->
 								</div>
 							</div>
 						</div>
@@ -128,85 +139,22 @@
 								<div class="modal-body">
 									<p>
 										<label>일정 이름</label><br/>
-                    <input type = "text" id = "editTitle" class = "span10" maxlength="8">
-
+										<input type = "text" id = "editTitle" class = "span10" maxlength="8">
 									</p>
 								</div>
 								<div class="modal-footer">
 									<div id="status-area"></div>
-                  <button type = "button" class = "btn btn-danger" data-dismiss = "modal" id = "remove">삭제</button>
-
-									#button type = "button" class = "btn btn-primary" data-option = "detail" id = "detail">detail</button
-									detailModal 모달구현해야함#
-                  <button type = "button" class = "btn btn-primary" data-dismiss="modal" id = "edit">수정</button>
+									<button type = "button" class = "btn btn-danger" data-dismiss = "modal" id = "remove">삭제</button>
+									<!--button type = "button" class = "btn btn-primary" data-option = "detail" id = "detail">detail</button
+									detailModal 모달구현해야함-->
+									<button type = "button" class = "btn btn-primary" data-dismiss="modal" id = "edit">수정</button>
 								</div>
 							</div>
 						</div>
-					</div> -->
+					</div>
 				</div>
 		</div>
   </div>
-
-  <div class="modal fade layerpop" id="addModal">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div id="siba"></div>
-				<div class="modal-header">
-					<p >일정 설정</p>
-				</div>
-
-				<!-- header <-->
-				<!-- <div class="modal-header"> -->
-				<!-- 닫기(x) 버튼 -->
-				<!-- <button type="button" class="close" data-dismiss="modal">×</button> -->
-				<!-- header title -->
-				<!-- <h3 class="modal-title">계정 생성</h3> -->
-				<!-- </div> -->
-				<!-- body -->
-				<div class="modal-body">
-					<div class="signup-inner">
-						<label for="addTitle"></label>
-						<input type="text" id="addTitle" class="form-control transparent modal-input span10" placeholder="내용을 입력하세요" maxlength="80">
-          </div>
-				</div>
-				<div class="modal-footer">
-          <div id="status-area">
-            <button type = "button" class="btn btn-primary" data-dismiss="modal" id="add">추가</button>
-          </div>
-        </div>
-			</div>
-		</div>
-	</div>
-
-  <div class="modal fade layerpop" id="editModal">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div id="siba"></div>
-				<div class="modal-header">
-					<p >일정 설정</p>
-				</div>
-
-				<!-- header <-->
-				<!-- <div class="modal-header"> -->
-				<!-- 닫기(x) 버튼 -->
-				<!-- <button type="button" class="close" data-dismiss="modal">×</button> -->
-				<!-- header title -->
-				<!-- <h3 class="modal-title">계정 생성</h3> -->
-				<!-- </div> -->
-				<!-- body -->
-				<div class="modal-body">
-					<div class="signup-inner">
-						<label for="editTitle"></label>
-            <input type = "text" id = "editTitle" class = "form-control transparent modal-input span10" maxlength="80">
-          </div>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-danger" data-dismiss="modal" id="remove">삭제</button>
-					<button type="button" class="btn btn-default" data-dismiss="modal" id="edit">수정</button>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	</div>
   <div id="black-cover"></div>
